grammar.txt
unary
	: INT
	| REAL
	| STRING
	| OPAREN expression CPAREN
	| var_expr
	| NOT unary

var_expr
    : ID
    | ID OPAREN opt_param_list CPAREN
    | ID OBRACKET UNARY CBRACKET

2: operator
	: PLUS
	| MINUS
	| TIMES
	| DIVIDES

expression
    : unary_expr
    | if
    | loop
    | otherwise

unary_expr
    : unary
    | unary operator unary
    | unary comp unary

expr_list
	: expression
	| expression expr_list

opt_expr_list
	: expression opt_expr_list
	| EMPTY

defs
    : function_def
	| array_def
	| var_def

 param_list
	: unary
	| unary COMMA paramList

7: opt_param_list
	: param_list
	| EMPTY

10: function_def
	: FUNCTION ID USING OPAREN opt_param_list CPAREN

11: body
	: OBRACE opt_expr_list CBRACE

12: array_def
	: LIST unary OBRACKET UNARY CBRACKET

14: var_def
	: VAR ID EQUALS unary

15: var_assign
	: ID EQUALS unary

17: comp
	: GREATER
	| LESS
	| GREATEREQUAL
	| GREATERLESS
	| NOTEQUAL

loop :
	| while

18: while
	: LOOP WHILE condition_list body
	| LOOP WHILE condition_list expression

19: if
	: IF condition_list expression opt_otherwise
	| IF condition_list body opt_otherwise

opt_otherwise
    : otherwise
    | EMPTY

otherwise
	: OTHERWISE expression
	| OTHERWISE if

linker
	: AND
	| OR
	| NOT

22: condition_list
	: expression comp expression
	| expression comp expression linker condition_list

23: return
	: RETURN expression

24: array_assign
	: UNARY OBRACKET UNARY CBRACKET EQUALS expression

25: rement
	: INCREMENT unary
	| DECREMENT unary

program
    	: opt_func_def_list

opt_func_def_list
    	: func_def_list
    	| EMPTY

func_def_list
    	: function_def func_def_list
    	| function_def
